fix(visibility): Component not showing on Mobile Home Page Section
Updated CSS and TSX files in PopularMediaSection and MediaCard components to modify display and styling behavior

--- a/app/components/HomePage/PopularMediaSection/component.module.css
+++ b/app/components/HomePage/PopularMediaSection/component.module.css
@@ -18,6 +18,17 @@
     }
 }
 
+#popular_container>div:not(#popular_list_container):not(#title_container) {
+    display: none;
+}
+
+@media((min-width: 990px)) {
+    #popular_container>div:not(#popular_list_container):not(#title_container) {
+        display: initial;
+    }
+
+}
+
 @media((min-width: 990px)) {
     #popular_container {
 
@@ -193,6 +204,8 @@
 
 /* FETCHED DATA */
 #new_fetched_data_container {
+
+    display: none;
 
     margin: 32px auto;
 
